 - Real changelog started

v1.3 - 10/27/2010
 - Various other OS support
 - Various improvements
 - Various new features

v1.4 - 10/20/2010
 - MAC netstat parsing fix
 - Experimental cups/samba status parsing
 - New colorscheme
 - Various improvements

v1.5 - 11/16/2010
 - Extensions now packaged/developed separately
 - Windows 7 support 
 - Various improvements

v1.6 - 11/22/2010
 - Windows XP support
 - More mature extension support
 - Various improvements

v1.7 - 1/07/2011
 - XML/JSON/PHP array output format support
 - Moved list of other authors from README to THANKS
 - Various improvements
 - Information on how to fix timezone is now in sample config file
 - Ability to find distribution name/version on Linux on major distros
 - Icons of OS's and popular Linux distros
 - Hardware detection (USB, PCI) now works on CentOS, among other linux distros
 - Kernel architecture is shown on Linux
 - FreeBSD soft-raid detection improved

v1.8 - 4/7/2011
 - DragonFly BSD support
 - Better Darwin (Mac) support
 - Reporting of Mac model
 - Ability to run certain commands as root (via nopasswd sudo)
 - Display CPU architecture on Windows
 - Better FreeBSD device detection
 - Bugfixes

v1.8.1 - 4/7/2011
 - Bugfix

v1.9 - 7/10/2013
 - Number of users logged in (with active shells)
 - Bugfixes
 - Default to UTC if timezone isn't set, instead of letting php5.3
   barf
 - HTML 5
 - More accurate memory usage since caches are omitted
 - JSON-P
 - Won't barf if ob_start or ob_gzhandler don't exist
 - Better OpenBSD support
 - Added Chinese/Finish/Italian translations
 - Date format customizable in config

v1.10 1/17/2014
 - Regex filtering for filesystem mountpoints
 - Fixed redhat icon
 - Multiple color scheme support

v1.11 5/2/2014
 - Intelligent output handling when running from cli
 - Adding some extentions to main git tree instead of packaging them separately
 - Better support for OS X Mavericks
 - Virtualization detection for Linux
 - CPU Usage reporting for Linux